<resources>
    <string name="app_name">Android ATM Application</string>
    <string name="login">Login</string>
    <string name="insert_card">Insert Card</string>
    <string name="select_card">Select Simulation Card</string>
    <string name="input_pin">Input Pin</string>
    <string name="enter">Enter</string>
    <string name="cancel">Cancel</string>
    <string name="withdraw">Withdraw</string>
    <string name="check_balance">Check Balance</string>
    <string name="remove_card">Remove Card</string>
    <string name="your_current_balance">Your Current Balance</string>
    <string name="select_amount">Select the amount you want to withdraw.</string>
    <string name="N500">500</string>
    <string name="N1000">1,000</string>
    <string name="N5000">5,000</string>
    <string name="N10000">10,000</string>
    <string name="N20000">20,000</string>
    <string name="incorrect_pin">Incorrect Pin.</string>
    <string name="transaction_receipt">Transaction Receipt.</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="location">Location:</string>
    <string name="transaction_type">Transaction Type:</string>
    <string name="account">Account:</string>
    <string name="amount">Amount:</string>
    <string name="available_balance">Available Balance:</string>
    <string name="back_home">Home</string>
    <string name="transaction_progress">Transaction in Progress...</string>
    <string name="others">Others</string>
    <string name="others_layout_heading">Enter amount you want to withdraw \n (multiples of 500 and 1000 only)</string>
    <string name="multiples_error">Amount is not a multiple of 500 or 1000.</string>

    <string-array name="cardnumbers">
        <item>1893829301</item>
        <item>3872819203</item>
    </string-array>
</resources>
