<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Withdraw">

    <TextView
        android:id="@+id/select_amount_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_amount"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_amount_textview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_500"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/N500"
            android:textSize="18sp"
            android:onClick="buttonClick"/>

        <Button
            android:id="@+id/button_1000"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/N1000"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:onClick="buttonClick"/>

        <Button
            android:id="@+id/button_5000"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/N5000"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:onClick="buttonClick"/>

        <Button
            android:id="@+id/button_10000"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/N10000"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:onClick="buttonClick"/>

        <Button
            android:id="@+id/button_20000"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/N20000"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:onClick="buttonClick"/>

        <Button
            android:id="@+id/button_others"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/others"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:onClick="buttonClick"/>
    </LinearLayout>

</RelativeLayout>