<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Receipt">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_receipt"
            android:textColor="@android:color/black"
            android:textSize="24sp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/titles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_type"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/available_balance"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/values"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16sp"
                android:layout_toRightOf="@id/titles"
                android:layout_marginLeft="24dp">

                <TextView
                    android:id="@+id/date_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"
                    tools:text="24 Oct, 2019."/>

                <TextView
                    android:id="@+id/time_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"
                    tools:text="12:33 PM"/>

                <TextView
                    android:id="@+id/location_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"
                    tools:text="Wuse Zone 4."/>

                <TextView
                    android:id="@+id/transaction_type_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"
                    tools:text="Withdraw"/>

                <TextView
                    android:id="@+id/account_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"
                    tools:text="Savings"/>

                <TextView
                    android:id="@+id/amount_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"
                    tools:text="NGN 14,000"/>

                <TextView
                    android:id="@+id/available_balance_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"
                    tools:text="NGN 10,000"/>

            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>

    <Button
        android:id="@+id/home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:text="@string/back_home"
        android:backgroundTint="@android:color/holo_green_light"/>



</RelativeLayout>