<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Transactions">

    <TextView
        android:id="@+id/welcome_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        tools:text="Welcome, Mary Okonkwo"/>

    <LinearLayout
        android:id="@+id/first_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/withdraw_buttom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withdraw"
            android:padding="15dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:textColor="@android:color/white"/>

        <View
            android:layout_width="25dp"
            android:layout_height="0dp"/>

        <Button
            android:id="@+id/check_balance_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_balance"
            android:padding="15dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_row"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/remove_card_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_card"
            android:padding="15dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</RelativeLayout>